--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,19 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "express": "^4.17.1",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.12.0"
+    "pg": "^8.11.3",
+    "express-session": "^1.17.3",
+    "dotenv": "^16.0.3"
   }
 }
