--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 # Dependencies
 node_modules/
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
-
-# Production
-/build
-/dist
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
 # Environment variables
 .env
@@ -17,17 +11,28 @@ node_modules/
 .env.test.local
 .env.production.local
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Build files
+/build
+/dist
 
-# IDE
+# IDE files
 .idea/
 .vscode/
 *.swp
 *.swo
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Database
+*.sqlite
+*.sqlite3
+
+# Temporary files
+*.tmp
+*.temp
